--- a/neurobrush_web/site/templates/base.html
+++ b/neurobrush_web/site/templates/base.html
@@ -10,28 +10,14 @@
         {% block extra_styles %}{% endblock %}
 
         <link href="{% static 'css/neurobrush.css'%}" rel="stylesheet">
+
+        <link href="{% static 'css/neurobrush.css'%}" rel="stylesheet">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="{% static 'js/neurobrush.js' %}" type="text/javascript"></script>       
         <style type="text/css">
-        body {
-            margin: 0;
-        }
-.rec{
-    width: 100%;
-    height: 160px;
-    opacity: .85; /* layer alpha */
-    background-color: #5fcdb5; /* layer fill content */
-}
-.logo {
-    width: 351px;
-    height: 45px;
-    padding: 54px 0 0 29px;
-}
+
 .back {
     background-image:url('{% static 'img/back.jpg' %}'); 
-    width: 100%;
-    height: 400px;
-    background-size: cover;
 }
 
 
