--- a/neurobrush_web/static/css/neurobrush.css
+++ b/neurobrush_web/static/css/neurobrush.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  height: 4000px;
 }
 .rec {
   width: 100%;
@@ -10,6 +11,8 @@ body {
   background-color: #5fcdb5;
   /* layer fill content */
 
+  bottom: 160px;
+  position: relative;
 }
 .logo {
   width: 351px;
@@ -20,4 +23,14 @@ body {
   width: 100%;
   height: 400px;
   background-size: cover;
+}
+.fixed {
+  position: fixed;
+  bottom: 0;
+}
+.canvasdiv {
+  background: gray;
+  width: 90%;
+  height: 480px;
+  margin: 50px auto;
 }
