--- a/neurobrush_web/static/css/neurobrush.less
+++ b/neurobrush_web/static/css/neurobrush.less
@@ -1,11 +1,14 @@
 body {
     margin: 0;
+    height: 4000px;
 }
 .rec { 
     width: 100%;
     height: 160px;
     opacity: .85; /* layer alpha */
     background-color: #5fcdb5; /* layer fill content */
+    bottom: 160px;
+    position: relative;
 }
 .logo {
     width: 351px;
@@ -16,4 +19,14 @@ body {
     width: 100%;
     height: 400px;
     background-size: cover;
+}
+.fixed {
+    position:fixed;
+    bottom:0
+}
+.canvasdiv {
+    background: gray;
+    width: 90%;
+    height: 480px;
+    margin: 50px auto;
 }
