--- a/neurobrush_web/static/css/neurobrush.less
+++ b/neurobrush_web/static/css/neurobrush.less
@@ -29,4 +29,8 @@ body {
     width: 90%;
     height: 480px;
     margin: 50px auto;
+    canvas {
+        width: 800px;
+        height: 100%;
+    }
 }
