--- a/neurobrush_web/static/css/neurobrush.css
+++ b/neurobrush_web/static/css/neurobrush.css
@@ -30,11 +30,14 @@ body {
 }
 .canvasdiv {
   background: gray;
-  width: 90%;
+  width: 100%;
   height: 480px;
   margin: 50px auto;
+  position: fixed;
+  bottom: -50px;
+  z-index: -1;
 }
 .canvasdiv canvas {
-  width: 800px;
+  width: 100%;
   height: 100%;
 }
