--- a/neurobrush_web/static/css/neurobrush.less
+++ b/neurobrush_web/static/css/neurobrush.less
@@ -26,11 +26,14 @@ body {
 }
 .canvasdiv {
     background: gray;
-    width: 90%;
+    width: 100%;
     height: 480px;
     margin: 50px auto;
+    position: fixed;
+    bottom: -50px;
+    z-index: -1;
     canvas {
-        width: 800px;
+        width: 100%;
         height: 100%;
     }
 }
