--- a/neurobrush_web/static/css/neurobrush.less
+++ b/neurobrush_web/static/css/neurobrush.less
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    height: 4000px;
+    height: 2000px;
 }
 .rec { 
     width: 100%;
@@ -27,7 +27,7 @@ body {
 .canvasdiv {
     background: gray;
     width: 100%;
-    height: 480px;
+    height: 100%;
     margin: 50px auto;
     position: fixed;
     bottom: -50px;
