--- a/neurobrush_web/static/css/neurobrush.css
+++ b/neurobrush_web/static/css/neurobrush.css
@@ -31,7 +31,7 @@ body {
 .canvasdiv {
   background: gray;
   width: 100%;
-  height: 100%;
+  height: 800px;
   margin: 50px auto;
   position: fixed;
   bottom: -50px;
@@ -39,5 +39,5 @@ body {
 }
 .canvasdiv canvas {
   width: 100%;
-  height: 100%;
+  height: 800px;
 }
