--- a/neurobrush_web/static/css/neurobrush.less
+++ b/neurobrush_web/static/css/neurobrush.less
@@ -22,18 +22,18 @@ body {
 }
 .fixed {
     position:fixed;
-    bottom:0
+    bottom:0;
 }
 .canvasdiv {
     background: gray;
     width: 100%;
-    height: 100%;
+    height: 800px;
     margin: 50px auto;
     position: fixed;
     bottom: -50px;
     z-index: -1;
     canvas {
         width: 100%;
-        height: 100%;
+        height: 800px;
     }
 }
