--- a/neurobrush_web/site/templates/base.html
+++ b/neurobrush_web/site/templates/base.html
@@ -248,7 +248,7 @@ var moveRainbow = new function() {
 
          <script type="text/javascript">
           setInterval(function(){
-            $.getJSON("http://localhost:8000/getlatest",{},function(data){
+            $.getJSON("http://neurobrush.com/getlatest",{},function(data){
                     window.globaldata = data;
             });
         },1000);
