--- a/neurobrush_web/site/templates/base.html
+++ b/neurobrush_web/site/templates/base.html
@@ -236,6 +236,10 @@ var moveRainbow = new function() {
     <body>
         <div class="back"></div>
                 <div class="rec">
+                    <img src="{% static 'img/button.png' %}" style="margin: auto auto;
+position: absolute;
+left: 603px;
+top: 19px;"/>
             <img class="logo" src="{% static 'img/logo.png' %}" / >
         </div>
         <div class="canvasdiv">
