--- a/neurobrush_web/site/templates/base.html
+++ b/neurobrush_web/site/templates/base.html
@@ -282,7 +282,7 @@ top: 19px;"/>
 
          <script type="text/javascript">
           setInterval(function(){
-            $.getJSON("http://localhost:8000/getlatest",{},function(data){
+            $.getJSON("http://neurobrush.com:8000/getlatest",{},function(data){
                     window.globaldata = data;
             });
         },1000);
