--- a/neurobrush_web/site/templates/base.html
+++ b/neurobrush_web/site/templates/base.html
@@ -270,7 +270,7 @@ var moveRainbow = new function() {
                     <img src="{% static 'img/button.png' %}" style="margin: auto auto;
 position: absolute;
 left: 603px;
-top: 19px;"/>
+top: 19px; width: 116px; height: 116px;"/>
             <img class="logo" src="{% static 'img/logo.png' %}" / >
         </div>
         <div class="canvasdiv">
